ændringer til diskussion

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1090,11 +1090,15 @@ Vi vil i dette afsnit diskutere vores fremgangsmåde og resultater fra både vor
 	\label{tab:fordeleogulemper}
 \end{wrapfigure}
 
-Vi valgte at opdele vores forsøg i to dele; et kontrolleret laboratorieeksperiment, og et ukontrolleret crowdsourcingeksperiment. Opdeling blev lavet for at sikre at vi havde nogle kontrollerede data som vi kunne bruge til at måle kvaliteten af vores ukontrollerede data. Ifølge \cite{liu2012crowdsourcing} er der fordele ved både laboratorieforsøg, og ved crowdsourcing - disse ses i tabel \ref{tab:fordeleogulemper} som illustrerer fordelene ved . Den lavere kvalitet af feedback, og den manglende interaktion med deltagerne fremhæver vigtigheden af at udføre et laboratorieeksperiment, hvor disse problemer netop ikke vil være til stede\cite{liu2012crowdsourcing}. Det kan derfor diskuteres om vores 10 personer til det kontrollerede laboratorieforsøg er tilstrækkeligt, eller om vi burde have haft en større mængde deltagere, og sikret os en større mængde data af højere kvalitet. Derudover ville det også have givet os en mulighed for at finde flere folk fra en mere varieret målgruppe til at sammenligne crowdsourcingdata med.
+Vi valgte at opdele vores forsøg i to dele; et kontrolleret laboratorieeksperiment, og et ukontrolleret crowdsourcingeksperiment. Opdelingen blev lavet for at sikre, at vi havde nogle kontrollerede data som vi kunne bruge til at måle kvaliteten af vores ukontrollerede data. Ifølge \cite{liu2012crowdsourcing} er der fordele ved både laboratorieforsøg, og ved crowdsourcing - disse ses i tabel \ref{tab:fordeleogulemper} som illustrerer det fra et crowdsourcing perspektiv. Den lavere kvalitet af feedback, og den manglende interaktion med deltagerne fremhæver vigtigheden af at udføre et laboratorieeksperiment, hvor disse problemer netop ikke vil være til stede\cite{liu2012crowdsourcing}. Det kan derfor diskuteres om vores 10 personer til det kontrollerede laboratorieforsøg er tilstrækkeligt, eller om vi burde have haft en større mængde deltagere, og sikret os en større mængde data af højere kvalitet. Derudover ville det også have givet os en mulighed for at finde flere folk fra en mere varieret målgruppe til at sammenligne crowdsourcingdata med.
 
-Fordelen ved brug af crowdsourcing taler dog klart for brugen af disse. Dog bliver der refereret til services som Amazon Mechanical Turk og CrowdFlower\cite{liu2012crowdsourcing}, der begge er betalingsservices, hvilket har nogle andre fordele og ulemper end vores valg af frivillige testdeltagere. De lave omkostninger, og den hurtige udførsel taler for at vælge betalingsservices, og ville have sikret os en større mængde data. Men vi kan ikke sige om kvaliteten af data havde været bedre, da der ved betalt crowdsourcing bliver et inticement til at gennemføre opgaverne hurtigere grundet Amazon Mechanical Turks betaling per gennemført opgave\cite{liu2012crowdsourcing}.
+Fordelene ved at bruge crowdsourcing taler dog klart for også at gøre brug af dette. Dog bliver der refereret til services som Amazon Mechanical Turk og CrowdFlower \cite{liu2012crowdsourcing}, der begge er betalingsservices, hvilket har nogle andre fordele og ulemper end vores valg af frivillige testdeltagere. De lave omkostninger, og den hurtige udførsel taler for at vælge betalingsservices, og ville have sikret os en større mængde data. Men vi kan ikke sige om kvaliteten af data havde været bedre, da der ved betalt crowdsourcing bliver et incitament til at gennemføre opgaverne hurtigere grundet Amazon Mechanical Turks betaling per gennemført opgave \cite{liu2012crowdsourcing}.
 
-Vores valg af opslagssteder til det ukontrollerede forsøg kan have haft en indflydelse på den indsamlede data. Vi valgte at bruge Reddit, hvilket giver os en meget specifik målgruppe, da den typiske Reddit-bruger er mand imellem 18 og 29 år\footnote{\href{http://www.pewinternet.org/2013/07/03/6-of-online-adults-are-reddit-users/}, besøgt: 03-06-2015}. Dette er også udslagsgivende i vores indsamlede data, hvor gennemsnitsalderen er 24.5 år og 233 ud af 257 er mænd. Det er førhen blevet påvist, at folk der spiller computer vil være hurtigere\cite{wyeld2013}. I vores undersøgelse er dette også tilfældet, da tabel \ref{tab:times_average} viser at gennemsnitstiderne for at gennemføre en opgave falder desto mere computer deltageren spiller.
+Vores valg af opslagssteder til det ukontrollerede forsøg kan have haft en indflydelse på den indsamlede data. Vi valgte at bruge Reddit, hvilket giver os en meget specifik målgruppe, da den typiske Reddit-bruger er mand imellem 18 og 29 år\footnote{\href{http://www.pewinternet.org/2013/07/03/6-of-online-adults-are-reddit-users/}, besøgt: 03-06-2015}. Dette er også udslagsgivende i vores indsamlede data, hvor gennemsnitsalderen er 24.5 år og 233 ud af 257 er mænd.
+
+Vores testdata kom ikke kun fra Reddit, men også fra opslag på vores Facebook-væg. Dette medfører også et bias som kan være væsentligt, da det er vores familie og venner vi derved bruger. Familie og venner har ofte hørt om projektet før og kan derfor have en forventning om hvad der skal ske og hvad de burde gøre. Da både Reddit og Facebook hovedsageligt bruges af yngre personer, så vil vores målgruppe også være begrænset heraf.
+
+Det er førhen blevet påvist, at folk der spiller computer vil være hurtigere \cite{wyeld2013}. I vores undersøgelse er dette også tilfældet, da tabel \ref{tab:times_average} viser at gennemsnitstiderne for at gennemføre en opgave falder desto mere computer deltageren spiller.
 
 \begin{wrapfigure}{l}{.40\linewidth}
 	\centering
@@ -1110,9 +1114,7 @@ Vores valg af opslagssteder til det ukontrollerede forsøg kan have haft en indf
 	\label{tab:times_average}
 \end{wrapfigure}
 
-Det er derimod væsentligt at se på hvilket pegeredskab testdeltagerne brugte, da der kan være forskel på tiden, når personer bruger f.eks. mus i forhold til touchpad \cite{epps1986}. I vores data brugte 160 personer mus, mens 96 brugte touchpad. På trods af at der er flest der brugte mus, så er det stadig vigtigt at huske at cirka $35\%$ brugte touchpad, hvilket ifølge \cite{epps1986} medfører et dårligere resultat.
-
-Vores testdata kom ikke kun fra Reddit, men også fra opslag på vores Facebook-væg. Dette medfører også et bias som kan være væsentligt, da det er vores familie og venner vi derved bruger. Familie og venner har ofte hørt om projektet før og kan derfor have en forventning om hvad der skal ske og hvad de burde gøre. Da både Reddit og Facebook hovedsageligt bruges af yngre personer, så vil vores målgruppe også være begrænset heraf.
+Det er derimod væsentligt at se på hvilket pegeredskab testdeltagerne brugte, da der kan være forskel på tiden, når personer bruger f.eks. mus i forhold til touchpad \cite{epps1986}. I vores data brugte 160 personer mus, mens 96 brugte touchpad. På trods af, at der er flest der brugte mus, så er det stadig vigtigt at huske at cirka $35\%$ brugte touchpad, hvilket ifølge \cite{epps1986} medfører et dårligere resultat.
 
 \addcontentsline{toc}{section}{Analyse}
 \section*{Analyse}
