--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1098,8 +1098,6 @@ Vores valg af opslagssteder til det ukontrollerede forsøg kan have haft en indf
 
 Vores testdata kom ikke kun fra Reddit, men også fra opslag på vores Facebook-væg. Dette medfører også et bias som kan være væsentligt, da det er vores familie og venner vi derved bruger. Familie og venner har ofte hørt om projektet før og kan derfor have en forventning om hvad der skal ske og hvad de burde gøre. Da både Reddit og Facebook hovedsageligt bruges af yngre personer, så vil vores målgruppe også være begrænset heraf. Hvis vi skulle undgå dette ville vi være nødt til at lave flere kontrollerede forsøg med aldersgrænse for testdeltagerne, eller bruge crowdsourcing sider, der henvender sig til den ældre befolkningsgruppe.
 
-Det er førhen blevet påvist, at folk der spiller computer vil være hurtigere \cite{wyeld2013}. I vores undersøgelse er dette også tilfældet, da tabel \ref{tab:times_average} viser at gennemsnitstiderne for at gennemføre en opgave falder desto mere computer deltageren spiller.
-
 \begin{wrapfigure}{l}{.40\linewidth}
 	\centering
 	\begin{tabular}{ll}
@@ -1114,18 +1112,14 @@ Det er førhen blevet påvist, at folk der spiller computer vil være hurtigere 
 	\label{tab:times_average}
 \end{wrapfigure}
 
-Det er derimod væsentligt at se på hvilket pegeredskab testdeltagerne brugte, da der kan være forskel på tiden, når personer bruger f.eks. mus i forhold til touchpad \cite{epps1986}. I vores data brugte 160 personer mus, mens 96 brugte touchpad. På trods af, at der er flest der brugte mus, så er det stadig vigtigt at huske at cirka $35\%$ brugte touchpad, hvilket ifølge \cite{epps1986} medfører et dårligere resultat.
+Det er førhen blevet påvist, at folk der spiller computer vil være hurtigere \cite{wyeld2013}. I vores undersøgelse er dette også tilfældet, da tabel \ref{tab:times_average} viser at gennemsnitstiderne for at gennemføre en opgave falder desto mere computer deltageren spiller.
+
+Ligeledes kan der være en væsentlig forskel på tiden, alt efter om testpersonen bruger mus eller touchpad \cite{epps1986}. I vores data brugte 160 testdeltagere mus, imens 96 brugte touchpad. I følge \cite{epps1986} ville dette betyde en forskel i de indbyrdes tider og derved også mindre sammenhæng i dataene. Dette kan medføre et dårligere resultat når vi forsøger at tilpasse vores modeller til hele datasættet. Det kunne derfor have været relevant at foretage en analyse af hhv. mus og touchpad brugere, hver for sig.
 
 \addcontentsline{toc}{section}{Analyse}
 \section*{Analyse}
-% Diskussion af tunnel
-I vores analyse af tunnelopgaverne viste tabel \ref{tab:table_analysis_aic_tunnel} at Meyer's formulering havde den bedste AIC. Der var dog så lille forskel mellem den og Accot \& Zhai, Fitts' og MacKenzie's, at man ikke kan sige at Meyer's er bedst. Welford's viste sig at være dårligere end de fire andre, men forskellen var dog ikke så stor. Det er vigtigt at nævne at vores data til tunnelopgaverne ikke nødvendigvis er repræsentativ, da vi har flere eksempler på personer som fik bedre tider jo større $ID$, et eksempel herpå kan ses i \ref{fig:navigationtest2}. I forhold til \cite{accot1997} så har vi kun haft fire tunnelopgaver, mens de brugte 16. Dette fører til at vi har et væsentlig mindre span af $ID$ og væsentlig mindre data at basere vores analyse på. Det kan være med til, at gøre vores konklusion om tunnelopgaverne mindre pålidelige.
-
-% Diskussion af spiral
-Analysen af spiralopgaverne viste, at Accot og Zhai's formulering beskrev dataene bedst, jvf. AIC værdierne fra tabel \ref{tab:table_analysis_aic_spiral}. Dette er præcis, hvad vi forventede, da deres er $ID$ er bestemt specifikt for denne type opgave. Ligesom for tunnelopgaverne gjorde vi kun brug af 4 i stedet for 16 opgaver, hvilket gør datasættet væsentligt mindre og måske endda for lille. I modsætning til tunnelopgaverne så har spiralopgavernes størrelser mere indflydelse på tiden. Hvis spiralen bliver større eller snævrere tager det længere tid for alle testdeltagerene at gennemføre. Sammenligningen med de fire originale formuleringer af Fitts' lov er dog svær at drage konklusioner ud fra. De motoriske analyser som de bygger på, med én hovedbevægelse efterfulgt af én eller flere underbevægelser er ikke tilfældet for spiralopgaven.
-
 % Diskussion af AIC
-Analysen af pegeopgaver viste, ligesom analysen af tunnelopgaverne, at Meyer's formulering tilpassede vores indsamlede data bedst, da den havde AIC-værdi på 92728.38 for alle personers pegeopgaver. Dette var 34.64 mindre end MacKenzie's formulering, som derved er den næstbedste formulering. Herefter fulgte Fitts' formulering som var 75,79 større end Meyer's formulering. Den formulering som tilpassede vores data dårligst var Welford, da den havde den højeste AIC-værdi og var 1781,96 større end Meyer's formulering. For at kunne sige at to modeller tilpasser den indsamlede data lige godt, så skal forskellen mellem dem være under to\cite{burnham2004}. Hvis de måske tilpasser den indsamlede data lige godt, så skal forskellen mellem dem være mellem fire og syv\cite{burnham2004}. Hvis de ikke tilpasser dataen lige godt, så vil forskellen ligge over 10\cite{burnham2004}. Forskellene mellem Meyer's formulering og de tre andre er alle større end 10. Vi kan derfor sige at Meyer's er den formulering som tilpasser vores data bedst, da den har den mindste AIC-værdi.
+Analysen af pegeopgaver viste, at Meyer's formulering tilpassede vores indsamlede data bedst, da den havde AIC-værdi på 92728.38 for alle personers pegeopgaver. Dette var 34.64 mindre end AIC-værdien for MacKenzie's formulering, som viste sig at være den næstbedste formulering. Herefter fulgte AIC-værdien for Fitts' formulering som var 75,79 større end selvsamme for Meyer's formulering. Den formulering som tilpassede vores data dårligst var Welford's, den havde den højeste AIC-værdi og var 1781,96 større end selvsamme for Meyer's formulering. For at kunne sige, at to modeller tilpasser den indsamlede data lige godt, så skal forskellen mellem dem være under to\cite{burnham2004}. Hvis de måske tilpasser den indsamlede data lige godt, så skal forskellen mellem dem være mellem fire og syv\cite{burnham2004}. Hvis de ikke tilpasser dataen lige godt, så vil forskellen ligge over 10\cite{burnham2004}. Forskellene mellem Meyer's formulering og de tre andre er alle større end 10. Vi kan derfor sige at Meyer's er den formulering som tilpasser vores data bedst, da den har den mindste AIC-værdi.
 
 Vi valgte også at lave AIC analyse af alle opgaver for 10 tilfældige personer. Her var resultaterne mere varierede, men Meyer's formulering havde den laveste ved syv ud af 10 testdeltagere. MacKenzie's formulering havde den laveste ved to ud af 10 testdeltagere, mens Welford's formulering havde den laveste værdi ved en af testdeltagerne. Der var en generel tendens til at forskellene mellem Meyer's formulering, MacKenzie's formulering og Fitts' formulering lå under to, hvilket betyder at de tilpasser dataen for enkeltpersoner lige godt. Welford's var lidt mere blandet. Her var en af forskellene under to, seks var mellem to og 10 og to var over 10. Det tyder altså på at Welford's formulering på enkeltpersonerne måske tilpasser dataen lige så godt som de fire andre, men at vi ikke kan være sikre på dette.\\
 
@@ -1134,6 +1128,12 @@ For at understøtte vores AIC analyse lavede vi også en analyse af residualplot
 I vores analyse fandt vi frem til værdien af $a$ og $b$ i hver af de fire formuleringer. De tre værdier af $a$ beskriver den tid det vil tage for en person at påbegynde opgaven. Denne ligger mellem cirka $400$ og $500$ millisekunder, hvilket også passer med hvad \cite{crossman1957} og \cite{welford1968} tidligere har fundet frem til. Det multiplikative led, $b$, beskriver hvor meget længere tid brugeren ville bruge på en opgave, hvis opgavens $ID$ bliver 1 større. Dette led ligger for Fitts', MacKenzie's og Meyer's omkring $150-200$, mens det for Welford's ligger omkring $300$. Grunden til at Welford's multiplikative led ligger højere er, at Welford's formulering ikke har det additive led og derfor vil den skulle stige mere, for at passe nogenlunde på vores data.\\
 
 Da vi har baseret vores forsøg på \cite{goldberg2015} vil vi også sammenligne vores resultater med deres. \cite{goldberg2015} fandt frem til at Meyer's var den bedste formel, når sværhedsgraden var lille, mens Fitts' formulering var den bedste, når sværhedsgraden var stor. Deres resultater var inkonsistente derimellem. Når de kiggede på MacKenzie's formulering, så var den klart bedre end både Fitts' og Meyer's. Dette modsiger vores resultater, hvor Meyer's var bedst. Grunden til dette kan være at vi generelt kigger på et område, hvor små variationer i dataen gør en stor forskel for hvilken formulering der passer bedst. Da vi på samme tid har med mennesker at gøre, så er der mange variable som kan have en indflydelse på hvor hurtigt de kan gøre det.\\
+
+% Diskussion af tunnel
+I vores analyse af tunnelopgaverne viste tabel \ref{tab:table_analysis_aic_tunnel} at Meyer's formulering havde den bedste AIC. Der var dog så lille forskel mellem den og Accot \& Zhai, Fitts' og MacKenzie's, at man ikke kan sige at Meyer's er bedst. Welford's viste sig at være dårligere end de fire andre, men forskellen var dog ikke så stor. Det er vigtigt at nævne at vores data til tunnelopgaverne ikke nødvendigvis er repræsentativ, da vi har flere eksempler på personer som fik bedre tider jo større $ID$, et eksempel herpå kan ses i \ref{fig:navigationtest2}. I forhold til \cite{accot1997} så har vi kun haft fire tunnelopgaver, mens de brugte 16. Dette fører til at vi har et væsentlig mindre span af $ID$ og væsentlig mindre data at basere vores analyse på. Det kan være med til, at gøre vores konklusion om tunnelopgaverne mindre pålidelige.
+
+% Diskussion af spiral
+Analysen af spiralopgaverne viste, at Accot og Zhai's formulering beskrev dataene bedst, jvf. AIC værdierne fra tabel \ref{tab:table_analysis_aic_spiral}. Dette er præcis, hvad vi forventede, da deres er $ID$ er bestemt specifikt for denne type opgave. Ligesom for tunnelopgaverne gjorde vi kun brug af 4 i stedet for 16 opgaver, hvilket gør datasættet væsentligt mindre og måske endda for lille. I modsætning til tunnelopgaverne så har spiralopgavernes størrelser mere indflydelse på tiden. Hvis spiralen bliver større eller snævrere tager det længere tid for alle testdeltagerene at gennemføre. Sammenligningen med de fire originale formuleringer af Fitts' lov er dog svær at drage konklusioner ud fra. De motoriske analyser som de bygger på, med én hovedbevægelse efterfulgt af én eller flere underbevægelser er ikke tilfældet for spiralopgaven.
 
 Generelt skal vi huske, at Fitts' lov beskriver komplekse menneskelige motoriske evner. Der vil derfor altid være forskel i indsamlede data, da forskellige personer har forskellige motoriske evner. Både indre og ydre faktorer kan have en effekt på hvor hurtigt en person kan udføre en given opgave. Der har siden Fitts' originale artikel blev udgivet i 1954 været lavet mange forsøg, for at bevise eller forbedre Fitts' lov. Denne er dog langt fra perfekt og skal derfor måske mere ses som en rettesnor, snarere end en egentlig lov.
 
