--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1,8 +1,12 @@
 \input{preface.tex}
 
-\begin{abstract}
-Human motion models for pointing tasks are used in the design of many everyday items, from software to smartphones and assembly lines. Fitts' Law defines a relationship between motion duration and the ratio of target distance over target size. This paper present a theoretical description of several formulations of Fitts' Law. We present a dataset from an uncontrolled, online user study. Using Akaike Information Criterion(AIC) and residual-analysis, we compare four variations of Fitts' Law. We also analyse the variants, based on the speed and velocity of a given task. We find that three of the four variations are closely aligned on the collected data, while the last one is significantly worse than the rest.
-\end{abstract}
+\addcontentsline{toc}{section}{Abstract}
+\section*{\centering~Abstract}
+
+We present an analysis of a dataset acquired from a uncontrolled online user study including 264 participants, backed up by a ten person controlled lab study. Using Akaike Information Criterion (AIC) and residual analysis we compare four variations of Fitts' Law to see which is the best fit. Looking at the participants speed, velocity and navigational paths we look for signs of patterns that could lead to a better alternative for Fitts' law, but find no such thing. It is also found that Meyer's variation is the best, with AIC-values ranging from 34.64 to 1781.96 less than other variations.
+
+\addcontentsline{toc}{section}{Resumé}
+\section*{\centering~Resumé}
 
 \addcontentsline{toc}{chapter}{Indledning}
 \chapter*{Indledning}
