--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1,12 +1,12 @@
 \input{preface.tex}
 
-\addcontentsline{toc}{section}{Abstract}
-\section*{\centering~Abstract}
+\subsection*{\centering~Abstract}
 
 We present an analysis of a dataset acquired from a uncontrolled online user study including 264 participants, backed up by a ten person controlled lab study. Using Akaike Information Criterion (AIC) and residual analysis we compare four variations of Fitts' Law to see which is the best fit. Looking at the participants speed, velocity and navigational paths we look for signs of patterns that could lead to a better alternative for Fitts' law, but find no such thing. It is also found that Meyer's variation is the best, with AIC-values ranging from 34.64 to 1781.96 less than other variations.
 
-\addcontentsline{toc}{section}{Resumé}
-\section*{\centering~Resumé}
+\subsection*{\centering~Resumé}
+
+Vi præsenterer en analyse af et datasæt erhvervet fra et ukontrolleret online brugerstudie med 264 deltagere, bakket op af et ti-persons kontrolleret laboratorieeksperiment. Ved hjælp af Akaike Information Criterion (AIC) og residualanalyse sammenligner vi fire varianter af Fitts' lov for at se, hvilken der passer dataen bedst. Ved at se på deltagernes fart, hastighed og navigationsbaner ser vi efter tegn på mønstre, der kunne føre til et bedre alternativ for Fitts 'lov, men finder ikke dette. Det findes også, at Meyers variation er bedst, med AIC-værdier i intervallet fra 34.64 til 1781.96 mindre end andre variationer.
 
 \addcontentsline{toc}{chapter}{Indledning}
 \chapter*{Indledning}
