--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1136,16 +1136,18 @@ Da vi har baseret vores forsøg på \cite{goldberg2015} vil vi også sammenligne
 % Diskussion af tunnel
 I vores analyse af tunnelopgaverne viste tabel \ref{tab:table_analysis_aic_tunnel_all} og \ref{tab:table_analysis_aic_tunnel_mean} at Meyer's formulering beskrev vores data bedst, da den havde den mindste AIC-værdi, på hhv. $20549.61$ og $33.68$. For vores fulde datasæt var forskellene i mellem Meyer's, Accot \& Zhai's, MacKenzie's og Fitts' formuleringer dog så små, at det ikke kan konkluderes, at Meyer's formulering beskriver vores datasæt bedst. Ved AIC-værdierne for gennemsnitstiderne er forskellen i mellem formuleringerne markant højere. Kun Accot \& Zhai's formulering har en forskel, der er mindre end 10, hvilket betyder, at de tre andre formuleringer ikke kan beskrive vores data i samme grad. 
 
-På grund af den store variation i forskellene vil vi vælge AIC-værdierne for det fulde datasæt at konkludere ud fra. Dette er primært begrundet med, at der findes en version, $AIC_c$, til at beregne AIC-værdier for datasæt, hvor antallet af datapunkter, $n$, er tilpas lille. Burnham argumenter i \cite{burnham2004} for, at hvis $\frac{n}{K} <\approx 40$ så bør $AIC_c$ bruges i stedet for $AIC$, i vores tilfælde har vi $n=4$ og $K=2 \vee 1$, hvilket giver værdier markant mindre end 40.
+På grund af den store variation i forskellene vil vi vælge AIC-værdierne for det fulde datasæt at konkludere ud fra. Dette er primært begrundet med, at der findes en version, AIC$_c$, til at beregne AIC-værdier for datasæt, hvor antallet af datapunkter, $n$, er tilpas lille. Burnham argumenter i \cite{burnham2004} for, at hvis $\frac{n}{K} <\approx 40$ så bør AIC$_c$ bruges i stedet for $AIC$, i vores tilfælde har vi $n=4$ og $K=2 \vee 1$, hvilket giver værdier markant mindre end 40, og vi burde derfor have brugt AIC$_c$ i stedet for AIC.
 
 Vores konklusion er derfor, at Welford's formulering beskriver vores data dårligere end de fire andre. Hvilken af disse fire der beskriver vores data bedst er dog ikke muligt at sige noget om. På forhånd havde vi forventet, at det ville være Accot og Zhai's formulering, som beskrev vores data bedst. Hvilket ikke entydigt er tilfældet, selvom de fire andre formuleringer ikke er beregnet til denne type opgaver. Dette kan skyldes flere ting, men specielt er det vigtigt at notere sig, at vores data til tunnelopgaverne ikke nødvendigvis er repræsentative. Vi har flere eksempler på personer, som fik bedre tider desto større $ID$, et eksempel herpå kan ses i \ref{fig:navigationtest2}. I forhold til \cite{accot1997} så har vi kun haft fire tunnelopgaver, mens de brugte 16. Dette fører til, at vi har et væsentlig mindre span af $ID$ og væsentlig mindre data at basere vores analyse på. Det er med til at gøre vores konklusion om tunnelopgaverne mindre pålidelige.
 
 I forhold til Accot og Zhai så er der også stor forskel i vores modellers konstanter $a$ og $b$. De fandt frem til $a=-532$ og $b=93$, imens vores tilsvarende konstanter er $a=6112.4$ og $b=47.77$, forskellen skyldes formentligt antallet af opgaver og derved også antallet af forskellige $ID$, men derudover så burde vores forsøg være ens. Deres værdier er fra tilpasning til gennemsnitstiderne imens vores er til det fulde datasæt, vi har dog også fundet konstanterne til gennemsnitstiderne for vores datasæt, hvilket gav $a=6112.7$ og $b=47.77$, som er næsten identisk med vores allerede beskrevne værdier.\\
 
 % Diskussion af spiral
-Stik imod vores tunnelopgave analyse så viste spiralopgaverne store forskelle i mellem AIC-værdierne. 
+Modsat vores tunnelopgave analyse så viste spiralopgaverne store forskelle i mellem AIC-værdierne, vist i tabel \ref{tab:table_analysis_aic_spiral_all} og \ref{tab:table_analysis_aic_spiral_mean}. Accot og Zhai's formulering beskrev vores data bedst med AIC-værdier på $20225.67$ og $61.91$ for hhv. det fulde datasæt og gennemsnitstiderne. De indbyrdes 'placeringer' er ens for begge AIC-analyser, men ligesom for tunnelopgaverne så er der en væsentlig variation i forskellene. Vi vil dog tage udgangspunkt i AIC-analysen for det fulde datasæt, på baggrund af samme argument som for navigationsopgaverne.
 
-Analysen af spiralopgaverne viste, at Accot og Zhai's formulering beskrev dataene bedst, jvf. AIC værdierne fra tabel \ref{tab:table_analysis_aic_spiral}. Dette er præcis, hvad vi forventede, da deres er $ID$ er bestemt specifikt for denne type opgave. Ligesom for tunnelopgaverne gjorde vi kun brug af 4 i stedet for 16 opgaver, hvilket gør datasættet væsentligt mindre og måske endda for lille. I modsætning til tunnelopgaverne så har spiralopgavernes størrelser mere indflydelse på tiden. Hvis spiralen bliver større eller snævrere tager det længere tid for alle testdeltagerene at gennemføre. Sammenligningen med de fire originale formuleringer af Fitts' lov er dog svær at drage konklusioner ud fra. De motoriske analyser som de bygger på, med én hovedbevægelse efterfulgt af én eller flere underbevægelser er ikke tilfældet for spiralopgaven.
+Alle forskellene i \ref{tab:table_analysis_aic_spiral_all} er større end 10, og vi kan derfor konkludere, at Accot og Zhai's formulering beskriver vores data bedre end de fire andre formuleringer. Dette er præcis, hvad vi forventede, da deres $ID$ er bestemt specifikt for denne type opgave. Ligesom for tunnelopgaverne gjorde vi kun brug af 4 i stedet for 16 opgaver, hvilket gør datasættet væsentligt mindre og måske endda for lille. I modsætning til tunnelopgaverne så har spiralopgavernes størrelser mere indflydelse på tiden. Hvis spiralen bliver større eller snævrere tager det længere tid for alle testdeltagerene at gennemføre. Sammenligningen med de fire originale formuleringer af Fitts' lov er dog svær at drage yderligere konklusioner ud fra. De motoriske analyser som de bygger på, med én hovedbevægelse efterfulgt af én eller flere underbevægelser er formentligt ikke tilfældet for spiralopgaven.
+
+I forhold til vores konstanter $a$ og $b$ og Accot og Zhai's, så er der igen en væsentlig forskel, de fik $a=115$ og $b=169$, imens vores værdier er på $a=2097.09$ og $b=553.25$. Det er svært at diskutere i yderlighed, hvad denne forskel betyder, da vi kun har brugt 4 spiralopgaver imens de brugte 16.
 
 
 \begin{itemize}
