--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1134,13 +1134,13 @@ I vores analyse fandt vi frem til værdien af $a$ og $b$ i hver af de fire formu
 Da vores pegeopgaver er en reproducering af tidligere udførte forsøg i \cite{goldberg2015}, så vil vi også sammenligne vores resultater med deres. Vi fandt, i vores analyse, at Meyer's var den formulering som tilpassede vores data bedst, ved alle testdeltageres pegeopgaver. \cite{goldberg2015} fandt frem til at MacKenzie's formulering er den som generelt tilpasser deres data bedst. Dette viser altså at vi ikke har kunne reproducere resultaterne i \cite{goldberg2015} på trods af at vi har reproduceret deres pegeopgaver og der kan derfor stilles spørgsmålstegn ved rigtigheden af resultaterne i \cite{goldberg2015}.
 
 % Diskussion af tunnel
-I vores analyse af tunnelopgaverne viste tabel \ref{tab:table_analysis_aic_tunnel_all} og \ref{tab:table_analysis_aic_tunnel_mean} at Meyer's formulering beskrev vores data bedst, da den havde den mindste AIC-værdi, på hhv. $20549.61$ og $33.68$. For vores fulde datasæt var forskellene i mellem Meyer's, Accot \& Zhai's, MacKenzie's og Fitts' formuleringer dog så små, at det ikke kan konkluderes, at Meyer's formulering beskriver vores datasæt bedst. Ved AIC-værdierne for gennemsnitstiderne er forskellen i mellem formuleringerne markant højere. Kun Accot \& Zhai's formulering har en forskel, der er mindre end 10, hvilket betyder, at de tre andre formuleringer ikke kan beskrive vores data i samme grad. 
+I vores analyse af tunnelopgaverne viste tabel \ref{tab:table_analysis_aic_tunnel_all} og \ref{tab:table_analysis_aic_tunnel_mean} at Meyer's formulering, da den havde den mindste AIC-værdi, på hhv. $20549.61$ og $33.68$. Det var dog ikke entydigt hvilken af formuleringerne som tilpassede dataen bedst, da både Accot \& Zhai's, MacKenzie's og Fitts' formulering havde AIC-værdier, hvor forskellen var under to. Derfor kan vi kun sige at de alle tilpasser dataen lige godt. Ved AIC-værdierne for gennemsnitstiderne er forskellen i mellem formuleringerne markant højere. Kun Accot \& Zhai's formulering har en forskel, der er mindre end 10, hvilket betyder, at de tre andre formuleringer ikke kan beskrive vores data i samme grad. Vores analyse viste også at Welford's formulering var den som beskrev vores data dårligst, da den havde den højeste AIC-værdi og forskellen var lige under ni. Vi kan altså ikke helt udelukke Welford's formulering og kan heller ikke sige hvilken formulering som beskriver vores data bedst.
 
-På grund af den store variation i forskellene vil vi vælge AIC-værdierne for det fulde datasæt at konkludere ud fra. Dette er primært begrundet med, at der findes en version, $AIC_c$, til at beregne AIC-værdier for datasæt, hvor antallet af datapunkter, $n$, er tilpas lille. Burnham argumenter i \cite{burnham2004} for, at hvis $\frac{n}{K} <\approx 40$ så bør $AIC_c$ bruges i stedet for $AIC$, i vores tilfælde har vi $n=4$ og $K=2 \vee 1$, hvilket giver værdier markant mindre end 40.
+På forhånd havde vi forventet, at det ville være Accot og Zhai's formulering, som beskrev vores data bedst. Dette er dog ikke entydigt tilfældet, selvom de fire andre formuleringer ikke er beregnet til denne type opgaver. Dette kan skyldes flere ting, men specielt er det vigtigt at notere sig, at vores data til tunnelopgaverne ikke nødvendigvis er repræsentative. Vi har flere eksempler på personer, som fik bedre tider desto større $ID$, et eksempel herpå kan ses i \ref{fig:navigationtest2}. I forhold til \cite{accot1997} så har vi kun haft fire tunnelopgaver, mens de brugte 16. Dette fører til, at vi har et væsentlig mindre span af $ID$ og væsentlig mindre data at basere vores analyse på. Det er med til at gøre vores konklusion om tunnelopgaverne mindre pålidelige.
 
-Vores konklusion er derfor, at Welford's formulering beskriver vores data dårligere end de fire andre. Hvilken af disse fire der beskriver vores data bedst er dog ikke muligt at sige noget om. På forhånd havde vi forventet, at det ville være Accot og Zhai's formulering, som beskrev vores data bedst. Hvilket ikke entydigt er tilfældet, selvom de fire andre formuleringer ikke er beregnet til denne type opgaver. Dette kan skyldes flere ting, men specielt er det vigtigt at notere sig, at vores data til tunnelopgaverne ikke nødvendigvis er repræsentative. Vi har flere eksempler på personer, som fik bedre tider desto større $ID$, et eksempel herpå kan ses i \ref{fig:navigationtest2}. I forhold til \cite{accot1997} så har vi kun haft fire tunnelopgaver, mens de brugte 16. Dette fører til, at vi har et væsentlig mindre span af $ID$ og væsentlig mindre data at basere vores analyse på. Det er med til at gøre vores konklusion om tunnelopgaverne mindre pålidelige.
+I forhold til Accot og Zhai så er der også stor forskel i vores modellers konstanter $a$ og $b$. De fandt frem til $a=-532$ og $b=93$, imens vores tilsvarende konstanter er $a=6112.4$ og $b=47.77$, forskellen skyldes formentligt antallet af opgaver og derved også antallet af forskellige $ID$, men derudover så burde vores forsøg være ens. Deres værdier er fra tilpasning til gennemsnitstiderne imens vores er til det fulde datasæt, vi har dog også fundet konstanterne til gennemsnitstiderne for vores datasæt, hvilket gav $a=6112.7$ og $b=47.77$, som er næsten identisk med vores allerede beskrevne værdier.
 
-I forhold til Accot og Zhai så er der også stor forskel i vores modellers konstanter $a$ og $b$. De fandt frem til $a=-532$ og $b=93$, imens vores tilsvarende konstanter er $a=6112.4$ og $b=47.77$, forskellen skyldes formentligt antallet af opgaver og derved også antallet af forskellige $ID$, men derudover så burde vores forsøg være ens. Deres værdier er fra tilpasning til gennemsnitstiderne imens vores er til det fulde datasæt, vi har dog også fundet konstanterne til gennemsnitstiderne for vores datasæt, hvilket gav $a=6112.7$ og $b=47.77$, som er næsten identisk med vores allerede beskrevne værdier.\\
+\cite{accot1997} bruger gennemsnitstiderne til at udføre deres udregninger, hvilket vi ikke har valgt at gøre. Hvis vi havde valgt at gøre det, ville vi have haft fire datapunkter for tunnelopgaverne, hvilket er så få at $AIC$ ikke er beregnet til at sammenligne modellerne. I dette tilfælde kunne vi have brugt $AIC_c$, som er beregnet til at beregne AIC-værdier for datasæt, hvor antallet af datapunkter, $n$, er tilpas lille. Burnham argumenter i \cite{burnham2004} for, at hvis $\frac{n}{K} <\approx 40$ så bør $AIC_c$ bruges i stedet for $AIC$, i vores tilfælde har vi $n=4$ og $K=2 \vee 1$, hvilket giver værdier markant mindre end 40. Vi har dog valgt ikke at bruge $AIC_c$, men derimod gøre brug af hele vores datasæt.
 
 % Diskussion af spiral
 Stik imod vores tunnelopgave analyse så viste spiralopgaverne store forskelle i mellem AIC-værdierne. 
