--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1,7 +1,7 @@
 \input{preface.tex}
 
 \subsection*{\centering~Abstract}
-We present an analysis of a dataset acquired from an uncontrolled online user study including 264 participants, backed up by a controlled lab study consisting of ten test subjects. The dataset consists of data from three different tasks; a pointing task and two different navigation tasks, a tunnel and a spiral task. Using Akaike Information Criterion (AIC), and residual analysis, we compare four variations of Fitts' Law to see which is the best fit for the pointing tasks. Where it is found that Meyer's variation gives the best fit, with AIC-values ranging from 34.64 to 1781.96 less than other variations. We include a fifth variation of Fitts' Law adjusted specifically for these navigation tasks by Accot \& Zhai. Using AIC we find that no variation describes our tunnel task best, while Accot \& Zhai describes our spiral task better than any of the other variations. Looking at the participants speed, velocity and navigational paths we look for signs of patterns that could lead to a better alternative for Fitts' law, but find no such thing.
+We present an analysis of a dataset acquired from an uncontrolled online user study including 264 participants, backed up by a controlled lab study consisting of ten test subjects. The dataset consists of data from three different tasks; a pointing task and two different navigation tasks, a tunnel and a spiral task. Using Akaike Information Criterion (AIC), and residual analysis, we compare four variations of Fitts' Law to see which is the best fit for the pointing tasks. It is found that Meyer's variation gives the best fit, with AIC-values ranging from 34.64 to 1781.96 less than other variations. We include a fifth variation of Fitts' Law adjusted specifically for the navigation tasks by Accot \& Zhai. Using AIC we find that no variation describes our tunnel task best, while Accot \& Zhai describes our spiral task better than any of the other variations. Looking at the participants speed, velocity and navigational paths we look for signs of patterns that could lead to a better alternative for Fitts' law, but find no such thing.
 
 \subsection*{\centering~Resumé}
 
